-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.7.1
-
None
The "Session manager" window (which pops up when you select File->Session manager) needs a some sort of "Are you sure? This action cannot be undone!" confirmation dialog, because it's all too easy to wrongly click the "Delete session" button and oops, all bookmarks (w/ notes included), breakpoints, watches, etc you've been working so hard to set up get lost with the click of one single button.
| For Gerrit Dashboard: QTCREATORBUG-9272 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 56837,4 | SessionManager: Ask the user before deleting a sesion. | 2.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |