SessionManager: Ask the user before deleting a sesion.

Task-number: QTCREATORBUG-9272
Change-Id: I636be81544cf114405fbf70e4ee5724c4fd43685
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>